# src/tsoa/swagger.json
@@ -44,21 +44,6 @@
 			},
 			"CreateAliasResponse": {
 				"$ref": "#/components/schemas/Pick_Alias.url-or-alias_"
-			},
-			"Pick_Alias.url_": {
-				"properties": {
-					"url": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"url"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"CreateAliasBody": {
-				"$ref": "#/components/schemas/Pick_Alias.url_"
 			}
 		},
 		"securitySchemes": {}
@@ -79,7 +64,7 @@
 	"paths": {
 		"/alias/{alias}": {
 			"get": {
-				"operationId": "GetUrk",
+				"operationId": "GetUrl",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -110,6 +95,7 @@
 						}
 					}
 				},
+				"description": "Retrieve the url for the given alias",
 				"security": [],
 				"parameters": [
 					{
@@ -139,17 +125,7 @@
 					}
 				},
 				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/CreateAliasBody"
-							}
-						}
-					}
-				}
+				"parameters": []
 			}
 		}
 	},
